# cguard

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cmake/: cguardConfig.cmake.in
examples/: example_result.c  example_scope_guard.c
include/: cguard.h  result.h  scope_guard.h
tests/: test_result.c  test_scope_guard.c
